--- a/src/sass/components/_full-overlay.scss
+++ b/src/sass/components/_full-overlay.scss
@@ -1,5 +1,5 @@
 .full-overlay {
-  position: absolute;
+  position: fixed;
   inset: 0;
   background-color: rgba($color-black-900, 0.5);
   backdrop-filter: blur(1.5rem);
